# multimodal-sentiment-analysis

./: ColabCentral.ipynb  Fasttext_dataset_IEMOCAP.ipynb  Fasttext_dataset_hugging.ipynb  Glove_dataset_IEMOCAP.ipynb  Glove_dataset_hugging.ipynb  README.md  context_utils.py  requirements.txt
asr/: README.md  asr.py  asr_F.py  asr_f.py
emotion_classification_keras-text_analyzer/: Fasttext_dataset_HUGGING_FACE.ipynb  Glove_dataset_HUGGING_FACE.ipynb  Glove_dataset_IEMOCAP.ipynb  Predictions.ipynb  README.md
image_analyzer/: .gitignore  README.md  pyproject.toml  requirements.txt
image_analyzer/configs/: flickr_faces.yaml
image_analyzer/detr/: eval.py  inference.py  train.py
image_analyzer/detr/datasets/: flickr_faces.py  transforms.py
image_analyzer/detr/logs/: logger.py
image_analyzer/detr/models/: __init__.py  detr.py  losses.py  matcher.py
image_analyzer/detr/utils/: box_ops.py  checkpoints.py  data_utils.py
image_analyzer/tests/: test_data.py
image_analyzer/tests/data/annotations/: instances_test.json
sound_analyzer/: README.md  mX_models.py  utils.py
text_analyzer/: Fasttext_dataset_IEMOCAP.ipynb  Prediction_EMOTION_CLASS.ipynb  predictions.py
