[tool.poetry]
name = "detr-light"
version = "0.1.0"
description = "Reimplementation of FAIR's DEtection TRansformer simplified model, with a training loop on a subset of coco."
authors = ["Juan Barajas <jbperches@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
torch = "^1.8.1"
requests = "^2.25.1"
tqdm = "^4.60.0"
scipy = "^1.6.3"
albumentations = "0.5.2"
tensorboard = "^2.5.0"
torchvision = "^0.9.1"
pycocotools = "^2.0.2"
ipykernel = "^5.5.5"
pandas = "^1.2.4"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
debugpy = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
